tests/suite/fail/generated/parser/fail_missing_brace_2.ny
fn main() {
    let x = 2
//~ ERROR Expected '}'
